# qml-videoplayer

./: CMakeLists.txt  SeekControl.qml  main.qml  qml.qrc
